fix: edit user overlap dropdown (#1165)

--- a/client/components/Settings/Practice/Users/styles.scss
+++ b/client/components/Settings/Practice/Users/styles.scss
@@ -205,3 +205,7 @@
   min-height: 162px;
   overflow: visible;
 }
+
+.editUserFormBody {
+  overflow: visible;
+}
